--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         ACME-PIA-Export
-version:      0.16
+name:         Acme-PIA-Export
+version:      0.017
 license:      perl
 version_from: Export.pm
 installdirs:  site
